--- a/Learn_about_Devin/prompting.mdx
+++ b/Learn_about_Devin/prompting.mdx
@@ -114,7 +114,7 @@ Devin needs guidance to make sure it knows what tasks to execute, and more impor
     1. Ensure that the diagram is clear and easy to understand```
   </Accordion>
 
-  <Accordion title="Devin self-hosts Redash" icon="burger">
+  <Accordion title="Devin self-hosts Redash" icon="server">
     ```
     Hi Devin - I want to test out Redash. Please self host the Redash server, connect a local sqlite database. Add some dummy data and create an example query & dashboard.
     ```
