--- a/release-notes.mdx
+++ b/release-notes.mdx
@@ -185,7 +185,7 @@ The PR metrics view aggregates all PRs made by Devin. The PR metrics view is ava
 
 ![Screenshot 2024-07-04 at 10.30.08 PM.png](https://prod-files-secure.s3.us-west-2.amazonaws.com/4f925d22-65a4-47c3-9aed-b65e115aaef3/53c7581c-b984-43e2-b157-94463b0f3d07/Screenshot_2024-07-04_at_10.30.08_PM.png)
 
-## 🔎 Session Filtering
+#### <Icon icon="books" iconType="filter" /> Session Filtering
 
 Quickly filter all of your sessions by creator, status, playbook, date, etc.
 
