--- a/release-notes.mdx
+++ b/release-notes.mdx
@@ -30,7 +30,7 @@ Convenience improvement for secrets management:
     ![Devin](/images/rn_secretsnew.png)
 </Frame>
 
-### <Icon icon="sidebar" iconType="key" /> General UI Improvements
+### <Icon icon="key" iconType="solid" /> General UI Improvements
 
 We’ve done some cleanup to our **mobile UI, settings page, and session controls.**
 
