--- a/release-notes.mdx
+++ b/release-notes.mdx
@@ -156,7 +156,11 @@ This will allow you to test and iterate to make the playbook more reliable, much
 
 Quickly edit a playbook before sending it to Devin. Selected playbooks show up inside of the input box and the input box can be expanded, enabling fast and convenient edits to a Playbook before sending it to Devin.
 
-[playbook_editing_improvements.mp4](https://prod-files-secure.s3.us-west-2.amazonaws.com/4f925d22-65a4-47c3-9aed-b65e115aaef3/3a7bd226-bad3-4392-be95-14f93d52ebd1/playbook_editing_improvements.mp4)
+<video
+  controls
+  className="w-full aspect-video"
+  src="/images/rn_playbook_editing.mp4"
+></video>
 
 Inline and in-session playbook edits won’t be reflected in the Playbook Library unless you click the **“Update Playbook in library”** button. Alternatively, save your edits as new Playbook with the **“Create new Playbook in library”** button.
 
@@ -180,7 +184,11 @@ Devin now abides by forbidden actions more reliably when it’s told what not to
 
 Explore how your teammates are using Playbooks in the new “Past runs” tab, and directly select Playbooks from library
 
-[Screen Recording 2024-07-12 at 4.44.23 PM.mov](https://prod-files-secure.s3.us-west-2.amazonaws.com/4f925d22-65a4-47c3-9aed-b65e115aaef3/ecbbf6c9-f99e-4635-8c60-6117d6ddd3b7/Screen_Recording_2024-07-12_at_4.44.23_PM.mov)
+<video
+  controls
+  className="w-full aspect-video"
+  src="/images/rn_playbklib2.mp4"
+></video>
 
 ### <Icon icon="question" iconType="solid" /> Ask Devin about Devin
 
