--- a/release-notes.mdx
+++ b/release-notes.mdx
@@ -68,7 +68,7 @@ Try Devin while on the go - Devin mobile is now more usable, although we have a 
 </Frame>
 </columns>
 
-### <Icon icon="slack" iconType="" /> Slack Integration 2.0
+### <Icon icon="slack" iconType="solid" /> Slack Integration 2.0
 
 <aside>
 💡 To see these changes, (1) an organization admin needs to reinstall Slack, and (2) individuals need to connect their Slack user at [preview.devin.ai/settings/integrations](https://preview.devin.ai/settings/integrations). You may also need to (3) re-add Devin to Slack channels.
@@ -123,13 +123,13 @@ Slack notifications are now more informative, containing message contents and se
 
 ## June 30, 2024
 
-### <Icon icon="computer" iconType="" /> Use Devin’s Editor and Shell
+### <Icon icon="computer" iconType="solid" /> Use Devin’s Editor and Shell
 
 It can sometimes be more convenient to directly take actions for Devin, rather than providing instructions for Devin to follow.
 
 We’re excited to share that you can now directly use Devin’s machine. The new “Use Devin’s Machine” button in the web interface opens VSCode in a new tab. Using VSCode, you can directly read and edit Devin’s files, as well as open up a terminal in Devin’s machine.
 
-### <Icon icon="rotate-left" iconType="" /> Rollback
+### <Icon icon="rotate-left" iconType="solid" /> Rollback
 
 You can now restore live sessions to a previous state. Rewind Devin’s memory and file system to any past moment in time and resume - useful for undoing wrong decisions, exploring alternative solutions, quickly iterating on playbooks/prompts, etc.
 
@@ -142,7 +142,7 @@ Restoring a checkpoint returns Devin to a previous point in time — Devin’s f
 - **When Devin made good progress, but then makes a mistake —** it can often be faster to revert Devin’s changes and let Devin retry with hints (or take over and complete the task yourself by [**using Devin’s machine**](https://www.cognition.ai/blog/june-24-product-update#use-devins-browser-editor-and-shell)), rather than working on top of Devin’s mistakes
 - **When iterating on a playbook or prompt —** try editing a playbook, and rolling back afterwards to quickly test whether the edit enables Devin to succeed reliably
 
-### <Icon icon="comment-pen" iconType="" /> Live Playbook Editing
+### <Icon icon="comment-pen" iconType="solid" /> Live Playbook Editing
 
 You can now edit playbooks while you’re running a session! If Devin isn’t responding to the playbook instructions as desired, you can rollback to a previous state in the session, edit the step in the playbook you want to make clearer for Devin, and retry the individual step, instead of rerunning the whole playbook in a new session.
 
@@ -152,7 +152,7 @@ This will allow you to test and iterate to make the playbook more reliable, much
     ![Devin](/images/rn_editplaybook.png)
 </Frame>
 
-### <Icon icon="pen" iconType="" /> Playbook Editing
+### <Icon icon="pen" iconType="solid" /> Playbook Editing
 
 Quickly edit a playbook before sending it to Devin. Selected playbooks show up inside of the input box and the input box can be expanded, enabling fast and convenient edits to a Playbook before sending it to Devin.
 
@@ -168,7 +168,7 @@ Inline and in-session playbook edits won’t be reflected in the Playbook Librar
     ![Devin](/images/rn_playbklib.png)
 </Frame>
 
-### <Icon icon="ban" iconType="" /> Forbidden Actions Reliability
+### <Icon icon="ban" iconType="solid" /> Forbidden Actions Reliability
 
 Devin now abides by forbidden actions more reliably when it’s told what not to do via user messages or Playbooks.
 
