--- a/release-notes.mdx
+++ b/release-notes.mdx
@@ -208,7 +208,7 @@ We recommend kicking off 2+ Devin sessions for some tasks, to give Devin more ch
     ![Devin](/images/rn_dupe.png)
 </Frame>
 
-### <Icon icon="home" iconType="solid" /> Home Screen Upgrades & Shortcuts
+### <Icon icon="house" iconType="solid" /> Home Screen Upgrades & Shortcuts
 
 The new Devin home screen makes it faster to explore and select Playbooks and Snapshots. We also introduced **Shortcuts.** Select a snapshot and/or playbook and save them as a shortcut so that they’re quick to reuse!
 
@@ -219,7 +219,7 @@ The new Devin home screen makes it faster to explore and select Playbooks and Sn
     ![Devin](/images/rn_newhome2.png)
 </Frame>
 
-### <Icon icon="chart-solid" iconType="solid" /> PR Metrics Dashboard
+### <Icon icon="chart-simple" iconType="solid" /> PR Metrics Dashboard
 
 The PR metrics view aggregates all PRs made by Devin. The PR metrics view is available at https://preview.devin.ai/metrics!
 
@@ -282,10 +282,6 @@ Knowledge is a collection of tips, instructions, and organizational context for 
 
 You can easily add knowledge to Devin’s “knowledge bank”, or disable it if needed. 
 View when and how Devin is using Knowledge in any run’s progress updates.
-
-<Frame>
-    ![Devin](/images/rn_knowledge2.png)
-</Frame>
 
 ### <Icon icon="code" iconType="solid" /> View Code Updates
 
@@ -400,7 +396,7 @@ Combine VSCode with our [Machine Snapshots feature](/Onboard_Devin/snapshots) to
 
 Learn more here: [Interacting with Devin’s Machine](/Collaborate_with_Devin/machine)
 
-### <Icon icon="cookies" iconType="solid" /> Cookies + Persisted Secrets
+### <Icon icon="cookie" iconType="solid" /> Cookies + Persisted Secrets
 
 With Persisted Secrets, any secrets that you add in the Settings page will be usable by Devin in all future Devin sessions.
 
