--- a/Learn_about_Devin/migrations.mdx
+++ b/Learn_about_Devin/migrations.mdx
@@ -3,42 +3,22 @@ title: "Migrations"
 icon: 'dove'
 ---
 
-Devin can take away the pain of migrations. From X > X to X > X, using Devin with playbooks is a great way to quickly move through monotonous migration tasks that require looping.
+Devin can take away the pain of migrations, smoothly transitioning between different technologies, platforms, or systems. Use the playbooks feature to easily reuse the prompt to repeat the same task as needed. 
 
 ### Use it for… 
-1. [placeholder]
-2. [placeholder]
-3. [placeholder]
+1. Migrating databases from one system to another (e.g., MySQL to PostgreSQL)
+2. Porting applications between different cloud providers
+3. Automating data transformation and transfer during migrations
 
 ### Example Prompts
 
 <AccordionGroup>
-  <Accordion title="Build a personal website - general" icon="browser">
+  <Accordion title="placeholder" icon="browser">
     ```
-    Can you do some research about John von Neumann and then make a nice website about him?
-    ```
-  </Accordion>
-  <Accordion title="Build a personal website - specific" icon="user">
-    ```
-    Create a one-page personal website for an online for {person} with the following features and sections:
-Copy1. A fixed navigation bar with links to the sections (About Me, My Work, Publications, Education)
-2. A hero section with an picture of the person
-3. An "About Me" section with an brief description of the person
-4. A "My Work" section with a timeline of work experiences and projects 
-5. An interactive "Publications" section with links to published articles or papers available online authored by {person} 
-6. An "Education" section with the schools {person} attended, degrees and graduating year
-
-Include filler placeholder content where you can't find publicly available information. Make the website pretty.
-```
-  </Accordion>
-  <Accordion title="Resume-builder web app" icon="file-user">
-    ```
-    Use react-pdf to make an interactive resume-builder web app; it should let the user fill out a form, and it'll show the pdf in real time. make sure the resulting resume looks good.
     ```
   </Accordion>
-  <Accordion title="Devin's Party Page" icon="party-horn">
+  <Accordion title="placeholder - specific" icon="user">
     ```
-    Write a vanillajs web app that, when i click a button "Celebrate", makes confetti rain down the screen. call it "Devin's Party Page"
     ```
   </Accordion>
 </AccordionGroup>
