--- a/Learn_about_Devin/refactors.mdx
+++ b/Learn_about_Devin/refactors.mdx
@@ -3,12 +3,12 @@ title: "Refactors"
 icon: 'code-compare'
 ---
 
-[intro]
+Devin can analyze existing codebases, identify areas for improvement, or execute on refactoring requirements you share without breaking functionality.
 
 ### Use it for…
-1. [placeholder]
-2. [placeholder]
-3. [placeholder]
+1. Improving code readability and maintainability
+2. Optimizing performance bottlenecks in your codebase
+3. Implementing design patterns to enhance code architecture
 
 ### Example Prompts
 
