--- a/Learn_about_Devin/scraping.mdx
+++ b/Learn_about_Devin/scraping.mdx
@@ -3,13 +3,18 @@ title: "Web Scraping"
 icon: 'globe'
 ---
 
-[intro]
+Devin is your expert web scraping assistant. It can build a web scraper or find the right web scraping tool to use, read through its API docs and get all the data you need. 
 
 ### Use it for…
-1. [placeholder]
-2. [placeholder]
-3. [placeholder]
+1. Developing efficient and robust web scrapers for data collection
+2. Implementing techniques to handle JavaScript-rendered content
+3. Creating parsers to extract structured data from HTML and XML
+4. Using existing web scraping services where website terms of service or restrictions require using an existing service
 
 ### Example Prompts
 
 ### Example Sessions
+
+Scrape emojis
+https://preview.devin.ai/sessions/4f8a7b129820493b9c0ca140cddede50
+<iframe src="https://preview.devin.ai/sessions/4f8a7b129820493b9c0ca140cddede50"> </iframe>
