--- a/Get_Started/first-run.mdx
+++ b/Get_Started/first-run.mdx
@@ -4,95 +4,36 @@ description: "Learn your favorite ways of working with Devin"
 icon: 'person-running'
 ---
 
-This guide will give some inspiration to start working with Devin. Start with Devin sessions that are **smaller in scope**, **well-documented**, **easily verifiable** and that have **a quick feedback loop**.
+Now that you're all set up, kick off your first Devin session! 
 
-## Start a run with Devin
-
-We’ve seen users build voice transcription apps, fine-tuned LLM apps, data analysis apps, scraping apps and more. Building web apps are a great way to start getting to know Devin.
+This guide will give you some inspiration to start working with Devin. Start with Devin sessions that are **smaller in scope**, **well-documented**, **easily verifiable** and that have **a quick feedback loop**. We’ve seen users build voice transcription apps, fine-tuned LLM apps, data analysis apps, scraping apps and more. Building web apps are a great way to start getting to know Devin.
 
 Get creative!
 
-**Devin builds a celebratory confetti web app** 
+## Start a run with Devin
+Log into your Devin account and start writing... Use and repurpose the prompts below to try out your favorite use cases or start working on a project with Devin. 
 
-```
-write a vanillajs webapp that, when i click a button "Celebrate", makes confetti rain down the screen. call it "Devin's Party Page"
-```
+<Frame>
+    ![Devin](/images/prompt_textbox.png)
+</Frame>
 
-Link to the session: [Devin’s Confetti Webapp](https://preview.devin.ai/devin/ff88b2e131ae4ce48c055d2bc435a838)
+## First-time Prompt Ideas
 
-Webapp: https://animated-frangollo-1fbb37.netlify.app/
+<AccordionGroup>
+  <Accordion title="Clone and set up repo" icon="copy">
+    ```  
+    Clone the repository from https://github.com/onblog/SnowJena, specifically the snowjena-ticket-server application, and set it up locally. First, ensure the snowjena-ticket-server application builds and runs successfully with the current setup. You don’t need to worry about other applications in the repository. Next, upgrade the Spring Boot version to 3.3.2 in the snowjena-ticket-server application, making only the necessary changes related to this version upgrade. After the upgrade, test the snowjena-ticket-server application to confirm it still builds and runs correctly. You don't need to push code into a repository. Instead, share a zipped folder. Do share screenshot of application running successfully post upgrade in the browser as well.
+    ```
+  </Accordion>
 
-**Devin self-hosts Redash**
+  <Accordion title="Research Alan Turing and build him a personal website" icon="magnifying-glass">
+    ```  
+    ```
+  </Accordion>
 
-```
-please self host redash server, connect a local sqlite database. add some dummy data and create an example query & dashboard.
-```
-
-Link to the session: [Self-host redash server](https://preview.devin.ai/sessions/675a54a158024b35a0feb8a159ed8273)
-
-**Set up [nfoert/cardie](https://github.com/nfoert/cardie) for local development and testing**
-
-```
-Get [**https://github.com/nfoert/cardie**](https://github.com/nfoert/cardie) set up and running
-```
-
-Link to the session: [Set up nfoert/cardie repository](https://preview.devin.ai/sessions/4d85f7893df3479b9be50ec458cc9684)
-
-Here are many more example tasks Devin has worked on for our users.
-
-**Host + pre-populate a jupyter notebook**
-
-Example Session: [Netlix Shows/Movies by Country](https://preview.devin.ai/devin/4f803558dc1e45ddb489fb93848015ae)
-
-Example Session: [Average California Real Estate Price by City](https://preview.devin.ai/devin/8ee352ce5bdb46fa8b345d7b8db5e1c6)
-
-```
-Playbook: Translate Python Notebook to Script
-
-## Overview
-Translate a python notebook into a script that takes CLI arguments and writes artifacts.
-
-## What’s Needed From User
-- Provide a python notebook as an attachment
-- Optionally provide specific values for the CLI arguments
-
-## Procedure
-1. Install all the libraries mentioned in the notebook.
-2. Create a new Python script file.
-3. Import the `argparse` library in addition to the mentioned libraries to take the command-line arguments.
-4. Break down the notebook code cells into Python functions
-- For each cell containing executable code, create a corresponding Python function (if not already present and if needed).
-5. Setup the argument parser
-- Find any hard coded variables in the notebook that can serve as the arguments to the script.
-6. Write the main part of the code
-- Call the previously defined functions with the necessary arguments where needed.
-7. Verify the script's functionality and correctness, and correct mistakes as needed.
-- Run the script with arguments
-- Open the script in your editor to verify its contents
-8. Run the script with specific CLI arguments.
-- If the user has provided specific values for the CLI arguments, use those
-9. Share the final script to the user as an attachment
-10. Share any images of any generated plots or results from running the script
-- Try the `savefig` option to save any inline visualisations in a file
-11. Share a summary of the results when you ran the script with CLI arguments
-
-## Specification
-- The script must maintain all the functionality of the notebook
-
-## Advice and Pointers
-1. Try to review the Python notebook and understand the logic within each code cell.
-2. Ensure that the functions you are creating take the necessary arguments and returns the required outputs.
-3. Try the `savefig` option to save the inline visualisations in a file
-```
-
-**🕸️ Create a gource visualization for any repository**
-
-Example Session: [Pytorch visualization](https://preview.devin.ai/devin/8fe32e3a349a4842b2d787e5ccac931b)
-
-Example Session: [Drawdb visualization](https://preview.devin.ai/devin/d98c5e3b4bef43c88b395a0862c36d76)
-
-```
-## Overview
+  <Accordion title="Create a Gource visualization" icon="spiderweb">
+    ```
+    ## Overview
 Given a link to a github repository, use Gource to visualise the git history.
 
 ## What’s Needed From User
@@ -130,7 +71,139 @@ Given a link to a github repository, use Gource to visualise the git history.
 1. Adjust the frame rate and resolution to balance video quality and file size.
 2. There is no need to authenticate the GitHub CLI on the machine.
 3. Make sure the .ppm file is properly generated for all the commits.
-```
+    ```
+  </Accordion>
+
+  <Accordion title="Create a quick PR" icon="code-pull-request">
+    ```  
+	## Overview
+	The task is to make a quick pull request to a repository.
+	Since this is a 'quick' PR, you will not need to run any code or test anything; simply make a PR and the user will handle the testing. Your only responsibility is reading and writing code.
+	
+	## What's Needed From User
+	- The repository to create a pull request to
+	
+	## Procedure
+	### Prepare your workspace
+	1. Navigate to the relevant repository on your machine (clarify with the user if you can't figure it out).
+	    - Check out the main branch and note down the name of the main branch.
+	    - Checkout to a new branch since you'll be making a pull request. The name of the branch has to be of the format `devin/<your-branch-name>/X` where X is a random number. For example `devin/fix-popup/3234`. Run `git remote -v && git pull && git checkout -b devin/{branch-name}/$RANDOM` and replace `{branch-name}` with the name of the branch you want to create.
+	2. Study the request, codebase, and plan out the changes
+	    - Review the most relevant files and code sections, identifying relevant snippets.
+	    - Inform the user of your plan
+	### Work on the PR itself
+	3. Make the code changes
+	    - Don't change anything that wasn't specifically requested by the user
+	4. Make the PR
+	    - Commit and push the changes and tell the user.
+	    - See advice section for the exact command to make the PR
+	    - Make a pull request & review the pr to make sure it looks OK.
+	    - Ensure all GitHub actions pass successfully & make necessary changes until they do
+	    - Send the PR link to the user and summarize what you changed.
+	5. Address any feedback from the review; send the PR link again every time you make any changes
+	    - If you need to make updates, just push more commits to the same branch; don't create a new one
+	
+	
+	## Task Specification
+	- PR link is included in your messages to the user
+	- PR was reviewed after creation
+	- PR does not include any stray changes
+	- PR does not change anything that wasn't specifically requested by the user
+	- PR description should include a summary of the changes, formatted as a checklist
+	- PR description should mention that the code was written without testing, and include - [ ] Test the changes as an item
+	- PR description should include the following footer: "This PR was written by [Devin](https://devin.ai/) :angel:"
+	- PR description should include any metadata that the user has provided (e.g. linear ticket tags in the appropriate syntax)
+	- PR description should not be malformatted (use --body-file instead of --body if the newlines are garbled!)
+	
+	## Forbidden Actions
+	- Do NOT try to access github.com through the browser, you will not be authenticated.
+	- NEVER force push on branches! Prefer merging over rebasing so that you don't lose any work.
+	- Do NOT push directly to the main branch.
+	
+	## Advice and Pointers
+	- Double check the name of the main branch (which could be `main` or `master`) using `git branch`.
+	- For repos with CI/CD on github actions, you can check build logs using the gh cli. if you're asked to fix a build/fix lint, you should start by looking at recent build logs
+	- Check `git status` before committing or adding files.
+	- Use `git diff` to see what changes you have made before committing.
+	- If you're updating an existing repo, use `gh cli` to make pull requests.
+	- Create a PR with a description with this command:
+	  ```
+	  echo -e "..." > /tmp/PR_DESCRIPTION.md && gh pr create --body-file=/tmp/PR_DESCRIPTION.md && rm /tmp/PR_DESCRIPTION.md
+	  ```
+	- use gh api to retrieve PR review comments: retrieve PR inline comments using api: e.g.,
+	  ```
+	  gh api \
+	  -H "Accept: application/vnd.github+json" \
+	  -H "X-GitHub-Api-Version: 2022-11-28" \
+	  /repos/OWNER/REPO/pulls/PULL_NUMBER/comments
+	  ```
+	- Send the PR link to the user every time you update & ask them to re-review so that it's convenient for them
+	- You should already be authorized to access any repositories the user tells you about. If not, ask the user for access.
+    ```
+  </Accordion>
+
+  <Accordion title="Create architecture diagram for repository" icon="diagram-subtask">
+    ```    
+    ## Overview    
+    This playbook guides you through the process of creating an architectural diagram of a public GitHub repository or any source code using [C4-PlantUML](https://github.com/plantuml-stdlib/C4-PlantUML)
+    
+    ## What’s Needed From User
+    1. Provide link to your desired public github repository or a zip file containing your source code
+    2. Provide instructions if you want the architecture diagram to be customized
+    
+    ## Procedure
+    1. Install dependencies
+    - Ensure that Java runtime is installed in your system
+    - Install Graphviz using `sudo apt install graphviz`
+    2. Download PlantUML from the browser
+        - Navigate to [https://plantuml.com/download](https://plantuml.com/download) in your browser and download [PlantUML](https://github.com/plantuml/plantuml/releases/download/v1.2024.5/plantuml-1.2024.5.jar)
+        - Ensure that it is included in your PATH
+    3. Extract the source code (if zip file is provided)
+    - Download the zip file provided by the user directly to the current working directory
+    - Extract the source code from the zip file using `unzip <file_name.zip>` 
+    4. Setup the GitHub repository (if provided)
+        - Clone the GitHub repository provided by the user
+        - Navigate to the correct directory
+    5. Analyze the functionality of different components in the app carefully
+        - Analyze the app directory
+        - Understand the functionality of each component in the app very carefully
+    6. Generate the `.puml` file
+        - Keep `Person` element outside `System_Boundary`
+        - Make sure to add all the essential components and their relevant details in the diagram
+        - Refer to [https://github.com/plantuml-stdlib/C4-PlantUML/blob/master/README.md](https://github.com/plantuml-stdlib/C4-PlantUML/blob/master/README.md) for detailed instructions
+        - Include the following in the `.puml` file after `@startuml`
+
+    ```javascript
+           !include  https://raw.githubusercontent.com/plantuml-stdlib/C4-PlantUML/master/C4_Container.puml
+           !include https://raw.githubusercontent.com/plantuml-stdlib/C4-PlantUML/master/C4_Component.puml
+    ```
+    7. Generate the architecture diagram
+        - Generate the architecture diagram from the `.puml` file
+        - Make sure that the command is run without errors
+    8. Share the final deliverables
+        - Share the architecture diagram with the user as an attachment
+    
+    ## Deliverables
+    1. The architecture diagram of the GitHub repository or the source code
+    
+    ## Advice and Pointers
+    1. Ensure that the diagram is clear and easy to understand```
+  </Accordion>
+</AccordionGroup>
+
+
+
+**Host + pre-populate a jupyter notebook**
+
+Example Session: [Netlix Shows/Movies by Country](https://preview.devin.ai/devin/4f803558dc1e45ddb489fb93848015ae)
+
+Example Session: [Average California Real Estate Price by City](https://preview.devin.ai/devin/8ee352ce5bdb46fa8b345d7b8db5e1c6)
+
+**🕸️ Create a gource visualization for any repository**
+
+Example Session: [Pytorch visualization](https://preview.devin.ai/devin/8fe32e3a349a4842b2d787e5ccac931b)
+
+Example Session: [Drawdb visualization](https://preview.devin.ai/devin/d98c5e3b4bef43c88b395a0862c36d76)
 
 **➰ Convert any jupyter notebook to a script**
 
@@ -142,83 +215,5 @@ Example Session: [Visualizing Data Series with Color Gradients](https://preview.
 
 Example Session: [Optimizing Gambling Strategies](https://preview.devin.ai/devin/453af5136fea4500a8e3956e2644a8a8)
 
-```
-Playbook: Translate Python Notebook to Script
-
-## Overview
-Translate a python notebook into a script that takes CLI arguments and writes artifacts.
-
-## What’s Needed From User
-- Provide a python notebook as an attachment
-- Optionally provide specific values for the CLI arguments
-
-## Procedure
-1. Install all the libraries mentioned in the notebook.
-2. Create a new Python script file.
-3. Import the `argparse` library in addition to the mentioned libraries to take the command-line arguments.
-4. Break down the notebook code cells into Python functions
-- For each cell containing executable code, create a corresponding Python function (if not already present and if needed).
-5. Setup the argument parser
-- Find any hard coded variables in the notebook that can serve as the arguments to the script.
-6. Write the main part of the code
-- Call the previously defined functions with the necessary arguments where needed.
-7. Verify the script's functionality and correctness, and correct mistakes as needed.
-- Run the script with arguments
-- Open the script in your editor to verify its contents
-8. Run the script with specific CLI arguments.
-- If the user has provided specific values for the CLI arguments, use those
-9. Share the final script to the user as an attachment
-10. Share any images of any generated plots or results from running the script
-- Try the `savefig` option to save any inline visualisations in a file
-11. Share a summary of the results when you ran the script with CLI arguments
-
-## Specification
-- The script must maintain all the functionality of the notebook
-
-## Advice and Pointers
-1. Try to review the Python notebook and understand the logic within each code cell.
-2. Ensure that the functions you are creating take the necessary arguments and returns the required outputs.
-3. Try the `savefig` option to save the inline visualisations in a file
-```
-
-**Place an order on DoorDash**
-
 Example Session: [Order an acai bowl](https://preview.devin.ai/devin/5893f431e6af4b19b1cb3fa6efbafc14) 
 
-```python
-## Overview
-The task is to order items, such as food, on DoorDash. You should access your DoorDash account, search the requested restaurant or item to order, select the items for the order, and confirm the order with the user who started the session.
-
-## Procedure
-1. Go to doordash.com 
-2. Search for the food or restaurant requested by the user
-3. If the user requested to order food
-	3.1 Select the 3 most highly rated options within the delivery radius
-	3.2 Share the food options and name of the restaurant with the user
-	3.3 Ask them to confirm their selection
-4. If the user requested to order from a specific restaurant
-	4.1 Select the restaurant closest to the default delivery location
-	4.2 If the restaurant requested is not within the delivery zone of the default delivery address, let the user know and ask for an alternative restaurant 
-5. Before ordering, check that the restaurant is open and delivers to the default delivery address on the DoorDash account
-6. Select the item or items requested by the users
-7. If the item(s) asks for additional required selections, share the options with the user and ask them to decide
-8. If the item(s) offers optional add-ons, share a screenshot of those options with the user and ask them if they’d like to add anything else to their order
-9. Add the order to cart once the user confirmed the selection
-10. By default, select a 20% tip
-11. Go to cart and request confirmation on the ordered items, total price and delivery address from the user
-12. Once the user confirms the price, order and address, complete the order
-13. Once ordered, confirm the order has been placed with the user and share an estimated delivery time
-
-## Specifications
-- You must see the order confirmation page and have an estimated delivery time in order to complete the task
-
-## Forbidden Actions
-- You cannot complete the order without receiving explicit confirmation from the user
-- You may not add items to the order that haven’t been requested by the user
-- You may not modify or remove items from the order unless the user specifically requests it 
-
-## Advice and Pointers
-- You are already signed into your account on DoorDash (via cookies). If not, you can use the DoorDash cookies saved in Secrets.
-- Do NOT ask clarifying questions until you perform at least one search for a relevant item.
-
-```
