--- a/Get_Started/first-run.mdx
+++ b/Get_Started/first-run.mdx
@@ -6,9 +6,7 @@ icon: 'person-running'
 
 Now that you're all set up, kick off your first Devin session! 
 
-This guide will give you some inspiration to start working with Devin. Start with Devin sessions that are **smaller in scope**, **well-documented**, **easily verifiable** and that have **a quick feedback loop**. We’ve seen users build voice transcription apps, fine-tuned LLM apps, data analysis apps, scraping apps and more. Building web apps are a great way to start getting to know Devin.
-
-Get creative!
+Start with Devin sessions that are **smaller in scope**, **well-documented**, **easily verifiable** and that have **a quick feedback loop**. We’ve seen users build voice transcription apps, fine-tuned LLM apps, data analysis apps, scraping apps and more. 
 
 ## Start a run with Devin
 Log into your Devin account and start writing... Use and repurpose the prompts below to try out your favorite use cases or start working on a project with Devin. 
@@ -31,7 +29,7 @@ Log into your Devin account and start writing... Use and repurpose the prompts b
     ```
   </Accordion>
 
-  <Accordion title="Create a Gource visualization" icon="spiderweb">
+  <Accordion title="Create a Gource visualization" icon="spider-web">
     ```
     ## Overview
 Given a link to a github repository, use Gource to visualise the git history.
@@ -192,28 +190,18 @@ Given a link to a github repository, use Gource to visualise the git history.
 </AccordionGroup>
 
 
+## Session Catalog
 
 **Host + pre-populate a jupyter notebook**
+- [Netlix Shows/Movies by Country](https://preview.devin.ai/devin/4f803558dc1e45ddb489fb93848015ae)
+- [Average California Real Estate Price by City](https://preview.devin.ai/devin/8ee352ce5bdb46fa8b345d7b8db5e1c6)
 
-Example Session: [Netlix Shows/Movies by Country](https://preview.devin.ai/devin/4f803558dc1e45ddb489fb93848015ae)
+**Create a gource visualization for any repository**
+- [Pytorch visualization](https://preview.devin.ai/devin/8fe32e3a349a4842b2d787e5ccac931b)
+- [Drawdb visualization](https://preview.devin.ai/devin/d98c5e3b4bef43c88b395a0862c36d76)
 
-Example Session: [Average California Real Estate Price by City](https://preview.devin.ai/devin/8ee352ce5bdb46fa8b345d7b8db5e1c6)
-
-**🕸️ Create a gource visualization for any repository**
-
-Example Session: [Pytorch visualization](https://preview.devin.ai/devin/8fe32e3a349a4842b2d787e5ccac931b)
-
-Example Session: [Drawdb visualization](https://preview.devin.ai/devin/d98c5e3b4bef43c88b395a0862c36d76)
-
-**➰ Convert any jupyter notebook to a script**
-
-Example Session: [Audio waveform and spectrogram](https://preview.devin.ai/devin/bb9ff93037ed4d5f9690099e5269f285)
-
-Example Session: [Decaptcha](https://preview.devin.ai/devin/a725564c943e4974ae2df16e54b14a5d)
-
-Example Session: [Visualizing Data Series with Color Gradients](https://preview.devin.ai/devin/ce43eb22d1aa48c594b1fd8915ed5130)
-
-Example Session: [Optimizing Gambling Strategies](https://preview.devin.ai/devin/453af5136fea4500a8e3956e2644a8a8)
-
-Example Session: [Order an acai bowl](https://preview.devin.ai/devin/5893f431e6af4b19b1cb3fa6efbafc14) 
-
+**Convert any jupyter notebook to a script**
+- [Audio waveform and spectrogram](https://preview.devin.ai/devin/bb9ff93037ed4d5f9690099e5269f285)
+- [Decaptcha](https://preview.devin.ai/devin/a725564c943e4974ae2df16e54b14a5d)
+- [Visualizing Data Series with Color Gradients](https://preview.devin.ai/devin/ce43eb22d1aa48c594b1fd8915ed5130)
+- [Optimizing Gambling Strategies](https://preview.devin.ai/devin/453af5136fea4500a8e3956e2644a8a8)
