--- a/Learn_about_Devin/upgrades.mdx
+++ b/Learn_about_Devin/upgrades.mdx
@@ -55,3 +55,7 @@ Similar to the migration and refactoring use cases, Devin is a helpful partner w
 </AccordionGroup>
 
 ### Example Sessions
+
+Java 7 to Java 8 Upgrade
+https://preview.devin.ai/sessions/3d4306ab94d24468999097cf7dea908f
+<iframe src="https://preview.devin.ai/sessions/3d4306ab94d24468999097cf7dea908f"> </iframe>
