--- a/Get_Started/first-run.mdx
+++ b/Get_Started/first-run.mdx
@@ -26,6 +26,7 @@ Log into your Devin account and start writing... Use and repurpose the prompts b
 
   <Accordion title="Research Alan Turing and build him a personal website" icon="magnifying-glass">
     ```  
+    Can you do some research about Alan Turing and then make a nice website about him? Include a photo
     ```
   </Accordion>
 
