--- a/Learn_about_Devin/webapps.mdx
+++ b/Learn_about_Devin/webapps.mdx
@@ -21,14 +21,14 @@ Devin is a great prototyping and web app iteration partner. Here are some exampl
   <Accordion title="Build a personal website - specific" icon="user">
     ```
     Create a one-page personal website for an online for {person} with the following features and sections:
-Copy1. A fixed navigation bar with links to the sections (About Me, My Work, Publications, Education)
-2. A hero section with an picture of the person
-3. An "About Me" section with an brief description of the person
-4. A "My Work" section with a timeline of work experiences and projects 
-5. An interactive "Publications" section with links to published articles or papers available online authored by {person} 
-6. An "Education" section with the schools {person} attended, degrees and graduating year
-
-Include filler placeholder content where you can't find publicly available information. Make the website pretty.
+    1. A fixed navigation bar with links to the sections (About Me, My Work, Publications, Education)
+    2. A hero section with an picture of the person
+    3. An "About Me" section with an brief description of the person
+    4. A "My Work" section with a timeline of work experiences and projects 
+    5. An interactive "Publications" section with links to published articles or papers available online authored by {person} 
+    6. An "Education" section with the schools {person} attended, degrees and graduating year
+    
+    Include filler placeholder content where you can't find publicly available information. Make the website pretty.
 ```
   </Accordion>
   <Accordion title="Resume-builder web app" icon="file-user">
