--- a/Learn_about_Devin/refactors.mdx
+++ b/Learn_about_Devin/refactors.mdx
@@ -12,4 +12,15 @@ Devin can analyze existing codebases, identify areas for improvement, or execute
 
 ### Example Prompts
 
+<AccordionGroup>
+  <Accordion title="placeholder" icon="browser">
+    ```
+    ```
+  </Accordion>
+  <Accordion title="placeholder - specific" icon="user">
+    ```
+    ```
+  </Accordion>
+</AccordionGroup>
+
 ### Example Sessions
