--- a/Learn_about_Devin/migrations.mdx
+++ b/Learn_about_Devin/migrations.mdx
@@ -59,6 +59,5 @@ Devin can take away the pain of migrations, smoothly transitioning between diffe
 
 Java 7 to Java 8 Upgrade
 https://preview.devin.ai/sessions/3d4306ab94d24468999097cf7dea908f
-<iframe src="https://preview.devin.ai/sessions/3d4306ab94d24468999097cf7dea908f"> </iframe>
-
+<iframe src="https://preview.devin.ai/sessions/3d4306ab94d24468999097cf7dea908f"width="100%" height="500px"></iframe>
 
