--- a/Learn_about_Devin/scraping.mdx
+++ b/Learn_about_Devin/scraping.mdx
@@ -25,4 +25,4 @@ Devin is your expert web scraping assistant. It can build a web scraper or find 
 
 Scrape emojis
 https://preview.devin.ai/sessions/4f8a7b129820493b9c0ca140cddede50
-<iframe src="https://preview.devin.ai/sessions/4f8a7b129820493b9c0ca140cddede50""width="100%" height="800px"></iframe>
+<iframe src="https://preview.devin.ai/sessions/4f8a7b129820493b9c0ca140cddede50" width="100%" height="800px"></iframe>
