--- a/Learn_about_Devin/webapps.mdx
+++ b/Learn_about_Devin/webapps.mdx
@@ -52,6 +52,6 @@ https://preview.devin.ai/sessions/bbf51261833c461c9b5f332845ba7894
 
 **Resume Builder Web App**
 https://preview.devin.ai/sessions/c6de2e8405ab48cd8867eee9c7b77fdc
-<iframe src="https://preview.devin.ai/sessions/c6de2e8405ab48cd8867eee9c7b77fdc""width="100%" height="800px"></iframe>
+<iframe src="https://preview.devin.ai/sessions/c6de2e8405ab48cd8867eee9c7b77fdc" width="100%" height="800px"></iframe>
 
 
