--- a/Learn_about_Devin/webapps.mdx
+++ b/Learn_about_Devin/webapps.mdx
@@ -48,7 +48,7 @@ Devin is a great prototyping and web app iteration partner. Here are some exampl
 
 **John von Neumann’s Personal Website**
 https://preview.devin.ai/sessions/bbf51261833c461c9b5f332845ba7894
-<iframe src="https://preview.devin.ai/sessions/bbf51261833c461c9b5f332845ba7894""width="100%" height="800px"></iframe>
+<iframe src="https://preview.devin.ai/sessions/bbf51261833c461c9b5f332845ba7894" width="100%" height="800px"></iframe>
 
 **Resume Builder Web App**
 https://preview.devin.ai/sessions/c6de2e8405ab48cd8867eee9c7b77fdc
